# pi-cy

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_SUMMARY.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  debug2.js  debug_page.js  eslint.config.js  index.html  package-lock.json  package.json  server.js  solution.html  tsconfig.json  tsconfig.server.json  vite.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.gstack/qa-reports/: qa-report-pi-cy-2026-06-02.md  test-results.json
.kilo/agent/: mimo-workflow.md
.kilo/command/: brainstorm.md  code-review.md  debug.md  dispatch.md  execute.md  plan.md  receive-review.md  tdd.md  verify.md  worktree.md
examples/test-workflow/: README.md  implementation_plan.md  main.py  task.md  walkthrough.md
media/: hidream-o1-workflow.json
media/logos/: README.md
plans/: ceo-execution-plan.md  gstack-mimo-fusion-plan.md  mcp-worktree-glass-enhancements.md  phase5-5-supplement.md  surpass-cc-haha-blueprint.md
public/: app.js  minimal.html
scripts/: generate-flowchart.py  generate-logos.py  start.bat
skills/: debug.md  verify.md
skills/model-overlays/: mimo-v2.5-pro.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/server/: index.ts  mimo-client.ts  rpc.ts  security.ts  types.ts  (+1 more)
(+80 files in other folders)
