[package]
name = "pi-cy"
version = "0.1.0"
description = "PI-CY - AI Coding Assistant powered by Xiaomi MiMo"
authors = ["PI-CY Community"]
edition = "2021"

[lib]
name = "pi_cy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
